@@ -1,3 +1,8 @@
+2004-02-05  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>
+
+	* src/global.h (tolower) [BSD]: Fix stupid typo in overrides for
+	toupper and tolower.
+
 2004-01-08  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>
 
 	* src/display.c (clearmsg): New function.  Does essentially the
